# aps-mini-apps

./: .gitignore  .loglogin  README.md  activate-spack.sh  cmd  config.json  docker-compose.devcontainer.yaml  docker-compose.yaml  exec-pipeline.sh  gdb_commands.txt  launcher.sh  multi-node-PBS-job-script.sh  polaris.sh  run-daq.sh  run-den.sh  run-dist.sh  run-exp-control.sh  run-mofka.sh  run-sirt.sh  setup.sh  single-node-PBS-job-script.sh  spack.yaml  spack_polaris.yaml  veloc.cfg
.devcontainer/container-daq/: devcontainer.json
.devcontainer/container-dist/: devcontainer.json
.devcontainer/container-sirt/: devcontainer.json
analyze/: mofka-overhead.py  zmq-latency.py  zmq-overhead.py
data/: tooth_preprocessed.h5
docker/: Dockerfile  docker-compose.yaml
docker/daq/: Dockerfile.StreamerDAQ  daq.docker.cmd  daq.docker.sh
docker/dst/: Dockerfile.StreamerDIST  dist.docker.sh
docker/quality/: Dockerfile.StreamerQuality  quality.docker.sh
docker/sirt/: Dockerfile.StreamerSIRT  sirt.docker.cmd  sirt.docker.sh
include/mofka_sirt/: mofka_stream.h
include/tracelib/: data_region_2d_bare_base.h  data_region_a.h  data_region_bare_base.h  disp_engine_base.h  disp_engine_reduction.h  disp_io_hdf5.h  reduction_space_a.h  sirt.h  trace_mq.h  trace_prot_generated.h  trace_stream.h  trace_utils.h
old/: CMakeLists.txt
old/include/tracelib/: disp_comm_mpi.h  disp_engine_base.h  disp_engine_reduction.h  mirrored_region_base.h  trace_data.h  trace_mq.h
old/python/: CMakeLists.txt
old/python/common/: serialization_times.py
old/python/common/serialization/: trace_prot_generated.h
old/python/common/serialization/MONA/TraceDS/: IType.py
old/python/quality/: Dockerfile.quality  ms-ssim-check.py  qcheck.py
old/python/viz/TraceGUI/: TDataModel.py  TSViewTrace.py
old/python/viz/TraceGUI/bk/: MockVizData.py  TSViewDAQ.py  TSViewDAQ.ui
old/python/viz/gui/: TraceSerializer.py
old/python/viz/gui/local/flatbuffers/: builder.py
old/python/viz/gui/serialization/: trace_prot.fbs
old/python/viz/gui/serialization/MONA/TraceDS/: TImage.py
old/python/viz/recon-file-streamer/: recon_pub.py
old/python/viz/xi-cam/Xi-cam.StreamingTomography/: setup.py
old/python/viz/xi-cam/Xi-cam.StreamingTomography/xicam/streamingtomography/: simple_client.py  streamingtomography.yapsy-plugin
old/src/art_simple/: art.py  art_simple.cc  main.cc  tomo_normalize_dxchange.ipynb
old/src/tracelib/: worker.c
old/tests/python/intermediator/: my_pub.py  my_pull.py  my_req.py
old/tests/python/zmq/: concurrent_tests_local.py  remote_thr_direct_file  remote_thr_file.cpp  test-remote-lat.py  test-remote-thr-file.py  test-remote-thr.py
old/tests/src/: trace_serialize_unittest.cc
python/common/: TraceSerializer.py
python/common/local/flatbuffers/: builder.py
python/common/serialization/: trace_prot.fbs
python/common/serialization/MONA/TraceDS/: Dim3.py  TImage.py
python/common/tests/: test_TraceSerializer.py
python/intermediaries/: tx_intermediary.py
python/quality/: iqcheck.py  streamer-quality.def
python/streamer-daq/: .loglogin  DAQStream.py  Dockerfile  Dockerfile.daq  Dockerfile.devcontainer  streamer-daq.def
python/streamer-denoiser/: denoiser.py  testA40GPU-it07500.h5
python/streamer-dist/: .loglogin  CMakeCache.txt  CMakeLists.txt  Dockerfile.dist  Makefile.bk  ModDistStreamPubDemo.py  mock_data_acq.h  mofka_dist.py  server.c  server.h  server.i  streamer-dist.def  test_DistStream.py  trace_streamer.c  trace_streamer.h
python/streamer-recv/: TDataModelBind.py  XTraceReceiver.py  cmd.in.cooley
python/streamer-sirt/: FailureInjector.py  ParslSirt.py
python/streamer_denoiser/: denoiser.py  producer.py
python/viz/TraceGUI/: TSViewDAQ.py  TSViewDAQ.ui  TSViewTrace.ui
python/viz/TraceGUI/bk/: TSView.ui
python/viz/gui/: cmd.viz  matplotlib_client.py
python/viz/gui/serialization/MONA/TraceDS/: Dim2.py
python/viz/xi-cam/: cmd-xicam
python/viz/xi-cam/Xi-cam.StreamingTomography/xicam/streamingtomography/: __init__.py
recons/: sirt_stream
services/data_acquisition/: DAQStream.py  Dockerfile.devcontainer  daq.py  daq_argparser.py  daq_communicator.py  daq_pvaccess.py  daq_simulate_from_file.py  daq_simulate_random.py  logger_config.py  test_daq_simulate_from_file.py
services/data_distributor/: CMakeLists.txt  Dockerfile.dist  ModDistStreamPubDemo.py  mock_data_acq.c
services/recon_sirt/: CMakeLists.txt  Dockerfile.devcontainer  compile.sh  run.sh  sirt_refactored.cc
services/tomographic_reconstruction/: CMakeLists.txt  Makefile  sirt_refactored.cc
services/tomographic_reconstruction/.devcontainer/: Dockerfile  devcontainer.json
src/: CMakeLists.txt
src/apmlr/: Makefile  apmlr.cc  apmlr.h  apmlr_main.cc
src/art_simple/: CMakeLists.txt  art_simple.h  cmd  gridrec.py  main.cc
src/common/: mock_streaming.h  mock_streaming.h.bk  trace_comm.cc  trace_comm.h  trace_data.h  trace_h5io.cc  trace_h5io.h  trace_utils.cc  trace_utils.h
src/common/DISP/core/: data_region_2d_bare_base.h  data_region_a.h  data_region_bare_base.h  data_region_base.h  disp_comm_base.h  disp_engine_base.h  mirrored_region_bare_base.h
src/common/DISP/io/: disp_io_base.h
src/common/stream/: trace_mq.cc  trace_mq.h  trace_stream.cc  trace_stream.h  worker.c
src/mlem/: Makefile  mlem.cc  mlem.h  mlem_main.cc  mlem_ordered_main.cc  mlem_stream_main.cc
src/mofka_sirt/: mofka_stream.cc
src/pml/: Makefile  pml.cc  pml.h  pml_main.cc  pml_main_model.cc
src/sirt/: CMakeLists.txt  Dockerfile.sirt  Makefile  cmd  mock_streaming.h  sirt.cc  sirt.h  sirt_main.cc  sirt_main_model.cc  sirt_stream_main.cc  streamer-sirt.def
src/tracelib/: trace_h5io.cc  trace_mq.cc  trace_stream.cc  worker.c
tests/: daq.cmd  dist.cmd  sirt.cmd  trace_serialize_unittest.cc
tests/python/intermediator/: .loglogin  my_push.py  my_rep.py  my_routerdealer.py  my_sub.py  my_sub_single.py  my_xpubxsub.py
tests/python/zmq/: concurrent_tests_remote.py  remote_thr_file
tests/src/: Makefile
utils/: inters.py  recon_sim.py
